Fixed categories alignment

--- a/main.css
+++ b/main.css
@@ -256,6 +256,7 @@ main p {
 
 .footer-logo-container {
   padding-top: 1rem;
+  margin-bottom: 1rem;
   width: 100%;
   height: 3rem;
   border-top: solid thin grey;
@@ -278,14 +279,27 @@ main p {
   width: 70%;
   display: flex;
   justify-content: space-between;
-
 }
 
 .footer-categories ul {
+  padding-right: 1rem;
+  margin-top: 0;
   list-style-type: none;
   text-decoration: none;
-  display: inline-block;
-  
+}
+
+.footer-categories ul li{
+  margin-bottom: 6px;
+}
+
+.footer-categories ul li:first-child{
+  margin-bottom: 1rem;
+  margin-top: 0;
+}
+
+.footer-categories .main-title {
+  font-size: 20px;
+  font-weight: bold;
 }
 
 .footer-categories a {
